# testit-poetry

./: .gitignore  pyproject.toml
testit_poetry/: console.py
testit_poetry.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_testit_poetry.py
