[tool.poetry]
name = "testit-poetry"
version = "0.1.0"
description = ""
authors = ["coolfish007 <liuhongchen@idatagz.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
